src/objects/SfdcjOppupdateCriteria__c.object
<CustomObject>
    <description>商談一括更新の検索画面の生成に利用します。
データの入力は行わず、項目も変更しないようにお願い致します。</description>
    <fields>
        <fullName>OpportunitiesOwner__c</fullName>
        <label>所有者</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>すべての商談</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>endDate__c</fullName>
        <description>検索条件作成用の為、変更しないで下さい。</description>
        <label>終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>name__c</fullName>
        <label>商談名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sortOrder__c</fullName>
        <label>順序</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>降順</fullName>
                </value>
                <value>
                    <fullName>昇順</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sort__c</fullName>
        <label>ソート</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>最終更新日</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>startDate__c</fullName>
        <description>検索条件作成用の為、変更しないで下さい。</description>
        <label>開始日</label>
        <type>Date</type>
    </fields>
    <label>商談検索用クライテリア</label>
    <listViews>
        <fullName>GroupMail_SfdcjOppupdateCriteria</fullName>
        <filterScope>Queue</filterScope>
        <label>メールテスト</label>
        <queue>GroupMail</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>SharingReason1__c</fullName>
        <label>テスト</label>
    </sharingReasons>
</CustomObject>